<resources>
    <string name="app_name">linkedInAnalog</string>
    <string name="avatar_desc">avatar_desc</string>
    <string name="delete_desc">delete_desc</string>
    <string name="photo_desc">photo_desc</string>
    <string name="image_desc">image_desc</string>
    <string name="login_hint">login</string>
    <string name="password">password_hint</string>
    <string name="ok">OK</string>
    <string name="name_hint">name</string>
    <string name="repeat_password_hint">repeat_password</string>
    <string name="calendar_finish_desc">calendar_finish_desc</string>
    <string name="calendar_start_desc">calendar_start_desc</string>
    <string name="post_content_hint">post content*</string>
    <string name="link_hint">link</string>
    <string name="job_start_hint">Job start*</string>
    <string name="position_hint">Position*</string>
    <string name="job_name_hint">Job name*</string>
    <string name="job_finish_hint">Job finish</string>
    <string name="job_link_hint">Job link</string>
    <string name="post_create_avatar_desc">post_create_avatar</string>
    <string name="delete_post_desc" translatable="false">delete_post_desc</string>
    <string name="event_content_hint">event content*</string>
    <string name="choose_date_hint">choose date*</string>
    <string name="link_hint2">link</string>
    <string name="choose_time_hint">choose time*</string>
    <string name="please_choose_type_hint">Please choose type*</string>
    <string name="online_hint">ONLINE</string>
    <string name="offline_hint">OFFLINE</string>
    <string name="choose_speakers_hint">Choose speakers</string>
    <string name="audio_desc_desc">audio_desc</string>
    <string name="bt_create_desc">bt_create_desc</string>
    <string name="close">close</string>
    <string name="bt_stop_desc">bt_stop_desc</string>
    <string name="musicname">MusicName</string>
    <string name="list_of_jobs_is_empty">List of Jobs is empty</string>
    <string name="user_name">User name</string>
    <string name="add_job_desc">add_job_desc</string>
    <string name="new_posts_hint">NEW POSTS</string>
    <string name="up_desc">up_desc</string>
    <string name="user_jobs">User jobs</string>
    <string name="start_event_hint">Start event :</string>
    <string name="_hint">Event type :</string>
    <string name="content_hint">Content</string>
    <string name="speaker_desc">speaker_desc</string>
    <string name="participants_desc">participants_desc</string>
    <string name="link_hint3">Link :</string>
    <string name="job_name_hint2">Job Name :</string>
    <string name="job_position_hint">Job Position :</string>
    <string name="start_hint">Start :</string>
    <string name="finish_hint">Finish :</string>
    <string name="link_hint4">Link :</string>
    <string name="play_desc">play_desc</string>



    <string name="Registration">Registration</string>
    <string name="Sign_in">SignIn</string>
    <string name="toast_long4Symbols">Login and password must be longer than 4 characters</string>
    <string name="Passwords_are_different">Passwords are different</string>
    <string name="CheckLogPass">Check login or password and repeat</string>
    <string name="MaybeNameTaken">Maybe the name is already taken)</string>
    <string name="CheckInternet">Check Internet connection and repeat</string>
    <string name="fieldWith">field with ,,*,, must not be empty</string>
    <string name="CreatingError">Creating error. Please try later</string>
    <string name="complete">complete</string>
    <string name="Error_retry">Error. Please retry</string>
    <string name="Authentication_error">Authentication error</string>
    <string name="SignToCreate">Sign in or create account</string>
    <string name="SignIn">Sign in</string>
    <string name="LoadDataError">Load data error.Please try later</string>
    <string name="DeleteError">Delete error. Please try later</string>
    <string name="LikeError">Like error. Please try later.</string>
    <string name="LoadError">Load error</string>
    <string name="Retry">Retry</string>
    <string name="empty_list">Empty List</string>
    <string name="retry">retry</string>
    <string name="jobs_history">Jobs history</string>


</resources>