<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ShowUserFragment">

    <Button
        android:id="@+id/button_userJobs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/user_jobs"
        app:layout_constraintBottom_toTopOf="@+id/recycler_userWall"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageView
        android:id="@+id/imageAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/avatar_desc"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_of_jobs_is_empty"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:singleLine="false"
        android:text="@string/user_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageAvatar"
        app:layout_constraintTop_toTopOf="@+id/imageAvatar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_userWall"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageAvatar"
        tools:listitem="@layout/recycler_post_item" />

    <androidx.cardview.widget.CardView
        android:id="@+id/group_jobs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="12dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_userJobs">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_userJobs"
           >

            <TextView
                android:background="@color/seed"
                android:id="@+id/group_jobs_title"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/jobs_history"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/button_close_jobs"
                android:src="@drawable/ic_close"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/jobs_recycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:background="@color/cardview_light_background"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group_jobs_title"
                tools:listitem="@layout/recycler_job_item" />

            <!--        <ImageView-->
            <!--            android:id="@+id/button_closeJobs"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_margin="4dp"-->
            <!--            android:contentDescription="@string/delete_desc"-->
            <!--            android:padding="6dp"-->
            <!--            android:src="@drawable/ic_clear_24"-->
            <!--            app:layout_constraintEnd_toEndOf="@+id/jobs_recycler"-->
            <!--            app:layout_constraintTop_toTopOf="@+id/jobs_recycler" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>